<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:onClick="overview"
            android:text="@string/return_overview" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculator"
            android:text="@string/calculator" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/total_usage"
            android:textSize="@dimen/running_total_size" />

        <TextView
            android:id="@+id/editText15"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="45"
            android:textSize="@dimen/litres_size" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/litres"
            android:textSize="@dimen/litres_size" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/shower"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shower"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText6"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/toilet"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:layout_below="@id/shower"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/toilet"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText7"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hygiene"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:layout_below="@id/toilet"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hygiene"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText8"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/laundry"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:layout_below="@id/hygiene"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="347dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/laundry"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dishes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:layout_below="@id/laundry"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="348dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dishes"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/drinking"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:layout_below="@id/dishes"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="349dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/drinking"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cooking"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:layout_below="@id/drinking"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cooking"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cleaning"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:layout_below="@id/cooking"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="358dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cleaning"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_layout_height"
                android:layout_below="@id/cleaning"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="358dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other"
                    android:textSize="@dimen/usage_category_size" />

                <TextView
                    android:id="@+id/editText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7 litres"
                    android:textSize="@dimen/usage_category_size"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="leftPress"
            android:text="@string/back"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:layout_centerVertical="true"
            android:text="@string/diary_date"
            android:textSize="@dimen/header_size" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="rightPress"
            android:text="@string/next"
            android:textSize="30sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>